--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -39,7 +39,7 @@
 }
 @media screen and (max-width: 768px) {
     #home {
-        min-height: 98vh;
+        height: 98vh;
         .container.main {
             flex-direction: column;
             position: absolute;
