--- a/src/scss/SearchMovies.scss
+++ b/src/scss/SearchMovies.scss
@@ -68,7 +68,8 @@
     }
     img {
         width: 100%;
-        max-width: 400px;
+		max-width: 400px;
+		max-height: 80vh;
     }
 }
 
